; ModuleID = '/home/carl/AnghaBench/openssl/crypto/pkcs7/extr_pk7_attr.c_PKCS7_add0_attrib_signing_time.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/pkcs7/extr_pk7_attr.c_PKCS7_add0_attrib_signing_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PKCS7_F_PKCS7_ADD0_ATTRIB_SIGNING_TIME = common dso_local global i32 0, align 4
@ERR_R_MALLOC_FAILURE = common dso_local global i32 0, align 4
@NID_pkcs9_signingTime = common dso_local global i32 0, align 4
@V_ASN1_UTCTIME = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @PKCS7_add0_attrib_signing_time(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %5, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %15

8:                                                ; preds = %2
  %9 = call i32* @X509_gmtime_adj(i32* null, i32 0)
  store i32* %9, i32** %5, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %8
  %12 = load i32, i32* @PKCS7_F_PKCS7_ADD0_ATTRIB_SIGNING_TIME, align 4
  %13 = load i32, i32* @ERR_R_MALLOC_FAILURE, align 4
  %14 = call i32 @PKCS7err(i32 %12, i32 %13)
  store i32 0, i32* %3, align 4
  br label %21

15:                                               ; preds = %8, %2
  %16 = load i32*, i32** %4, align 8
  %17 = load i32, i32* @NID_pkcs9_signingTime, align 4
  %18 = load i32, i32* @V_ASN1_UTCTIME, align 4
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @PKCS7_add_signed_attribute(i32* %16, i32 %17, i32 %18, i32* %19)
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %15, %11
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32* @X509_gmtime_adj(i32*, i32) #1

declare dso_local i32 @PKCS7err(i32, i32) #1

declare dso_local i32 @PKCS7_add_signed_attribute(i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
